--- a/index.html
+++ b/index.html
@@ -21,22 +21,20 @@
               twitch: '#9146FF',
               kick: '#53FC18',
               dark: '#000000',
-              glass: 'rgba(255, 255, 255, 0.05)',
-              'glass-hover': 'rgba(255, 255, 255, 0.1)',
-              'glass-border': 'rgba(255, 255, 255, 0.12)',
-              'glass-strong': 'rgba(20, 20, 20, 0.6)',
+              glass: 'rgba(255, 255, 255, 0.03)',
+              'glass-border': 'rgba(255, 255, 255, 0.08)',
             },
-            backdropBlur: {
-              'xs': '2px',
+            transitionTimingFunction: {
+              'out-expo': 'cubic-bezier(0.16, 1, 0.3, 1)', // Apple/Framer style spring
             },
             animation: {
-              'slide-in': 'slideIn 0.4s cubic-bezier(0.16, 1, 0.3, 1)',
-              'fade-in': 'fadeIn 0.5s ease-out',
+              'slide-up': 'slideUp 0.6s cubic-bezier(0.16, 1, 0.3, 1)',
+              'fade-in': 'fadeIn 0.4s ease-out',
             },
             keyframes: {
-              slideIn: {
-                '0%': { transform: 'translateY(20px) scale(0.96)', opacity: '0' },
-                '100%': { transform: 'translateY(0) scale(1)', opacity: '1' },
+              slideUp: {
+                '0%': { transform: 'translateY(20px)', opacity: '0' },
+                '100%': { transform: 'translateY(0)', opacity: '1' },
               },
               fadeIn: {
                 '0%': { opacity: '0' },
@@ -52,42 +50,41 @@
         background-color: #000000;
         color: white;
         overflow: hidden;
-        /* Apple-style Aurora Background */
-        background: 
-          radial-gradient(circle at 15% 50%, rgba(83, 252, 24, 0.08), transparent 25%), 
-          radial-gradient(circle at 85% 30%, rgba(145, 70, 255, 0.08), transparent 25%);
-        background-attachment: fixed;
       }
       
-      /* Liquid Glass Utility */
+      /* Liquid Glass Amoled Utility */
       .liquid-glass {
-        background: rgba(25, 25, 25, 0.65);
-        backdrop-filter: blur(20px);
-        -webkit-backdrop-filter: blur(20px);
-        border: 1px solid rgba(255, 255, 255, 0.08);
-        box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.36);
+        background: rgba(10, 10, 10, 0.6);
+        backdrop-filter: blur(24px);
+        -webkit-backdrop-filter: blur(24px);
+        border: 1px solid rgba(255, 255, 255, 0.05);
+        box-shadow: 0 0 40px rgba(0,0,0,0.5);
       }
 
       .liquid-glass-strong {
-        background: rgba(10, 10, 10, 0.85);
-        backdrop-filter: blur(40px);
-        -webkit-backdrop-filter: blur(40px);
-        border-bottom: 1px solid rgba(255, 255, 255, 0.08);
+        background: rgba(5, 5, 5, 0.85);
+        backdrop-filter: blur(30px);
+        -webkit-backdrop-filter: blur(30px);
+        border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+      }
+      
+      .neon-glow {
+        box-shadow: 0 0 20px rgba(145, 70, 255, 0.05), 0 0 10px rgba(83, 252, 24, 0.05);
       }
 
       /* Scrollbar */
       .custom-scrollbar::-webkit-scrollbar {
-        width: 5px;
+        width: 4px;
       }
       .custom-scrollbar::-webkit-scrollbar-track {
         background: transparent;
       }
       .custom-scrollbar::-webkit-scrollbar-thumb {
-        background: rgba(255, 255, 255, 0.15);
-        border-radius: 100vh;
+        background: #333;
+        border-radius: 10px;
       }
       .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-        background: rgba(255, 255, 255, 0.25);
+        background: #555;
       }
     </style>
   <script type="importmap">
