--- a/index.html
+++ b/index.html
@@ -52,24 +52,24 @@
         overflow: hidden;
       }
       
-      /* Liquid Glass Amoled Utility */
+      /* Liquid Glass Amoled Utility 2.0 */
       .liquid-glass {
-        background: rgba(10, 10, 10, 0.6);
-        backdrop-filter: blur(24px);
-        -webkit-backdrop-filter: blur(24px);
-        border: 1px solid rgba(255, 255, 255, 0.05);
-        box-shadow: 0 0 40px rgba(0,0,0,0.5);
+        background: rgba(18, 18, 18, 0.65);
+        backdrop-filter: blur(40px) saturate(180%);
+        -webkit-backdrop-filter: blur(40px) saturate(180%);
+        border: 1px solid rgba(255, 255, 255, 0.08);
+        box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.5);
       }
 
       .liquid-glass-strong {
         background: rgba(5, 5, 5, 0.85);
-        backdrop-filter: blur(30px);
-        -webkit-backdrop-filter: blur(30px);
-        border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+        backdrop-filter: blur(50px) saturate(180%);
+        -webkit-backdrop-filter: blur(50px) saturate(180%);
+        border-bottom: 1px solid rgba(255, 255, 255, 0.08);
       }
       
-      .neon-glow {
-        box-shadow: 0 0 20px rgba(145, 70, 255, 0.05), 0 0 10px rgba(83, 252, 24, 0.05);
+      .liquid-glass-border {
+         border: 1px solid rgba(255, 255, 255, 0.08);
       }
 
       /* Scrollbar */
