--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             animation: {
               'slide-up': 'slideUp 0.6s cubic-bezier(0.16, 1, 0.3, 1)',
               'fade-in': 'fadeIn 0.4s ease-out',
+              'logo-float': 'logoFloat 3s ease-in-out infinite',
             },
             keyframes: {
               slideUp: {
@@ -40,6 +41,10 @@
               fadeIn: {
                 '0%': { opacity: '0' },
                 '100%': { opacity: '1' },
+              },
+              logoFloat: {
+                '0%, 100%': { transform: 'translateY(0)', filter: 'drop-shadow(0 0 8px rgba(145, 70, 255, 0.3))' },
+                '50%': { transform: 'translateY(-2px)', filter: 'drop-shadow(0 0 15px rgba(83, 252, 24, 0.5))' },
               }
             }
           }
@@ -53,25 +58,38 @@
         overflow: hidden;
       }
       
-      /* Liquid Glass 3.0 - Clearer, Sharper */
+      /* Liquid Glass 4.0 - Ultra Clear Glass */
       .liquid-glass {
-        background: rgba(10, 10, 10, 0.75); /* Darker base, less opaque */
-        backdrop-filter: blur(16px) saturate(180%);
-        -webkit-backdrop-filter: blur(16px) saturate(180%);
-        border: 1px solid rgba(255, 255, 255, 0.12);
-        border-top: 1px solid rgba(255, 255, 255, 0.2); /* Edge highlight */
-        box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.8);
+        background: rgba(5, 5, 5, 0.60);
+        backdrop-filter: blur(12px) saturate(180%);
+        -webkit-backdrop-filter: blur(12px) saturate(180%);
+        border: 1px solid rgba(255, 255, 255, 0.15);
+        border-top: 1px solid rgba(255, 255, 255, 0.25);
+        box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.8), inset 0 0 0 1px rgba(255, 255, 255, 0.05);
       }
 
       .liquid-glass-strong {
-        background: rgba(0, 0, 0, 0.85);
-        backdrop-filter: blur(20px) saturate(180%);
-        -webkit-backdrop-filter: blur(20px) saturate(180%);
+        background: rgba(0, 0, 0, 0.80);
+        backdrop-filter: blur(16px) saturate(200%);
+        -webkit-backdrop-filter: blur(16px) saturate(200%);
         border-bottom: 1px solid rgba(255, 255, 255, 0.15);
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
       }
       
-      .liquid-glass-border {
-         border: 1px solid rgba(255, 255, 255, 0.1);
+      /* Rainbow Username Animation */
+      .rainbow-text {
+        background: linear-gradient(to right, #ff0000, #ff7f00, #ffff00, #00ff00, #0000ff, #4b0082, #9400d3);
+        background-size: 200% auto;
+        color: transparent;
+        -webkit-background-clip: text;
+        background-clip: text;
+        animation: rainbow 3s linear infinite;
+        font-weight: 800;
+      }
+
+      @keyframes rainbow {
+        0% { background-position: 0% 50%; }
+        100% { background-position: 200% 50%; }
       }
 
       /* Scrollbar */
