--- a/index.html
+++ b/index.html
@@ -75,6 +75,16 @@
         border-bottom: 1px solid rgba(255, 255, 255, 0.15);
         box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
       }
+
+      /* Premium Modal Glass */
+      .liquid-modal {
+        background: rgba(18, 18, 18, 0.75);
+        backdrop-filter: blur(24px) saturate(180%);
+        -webkit-backdrop-filter: blur(24px) saturate(180%);
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        border-top: 1px solid rgba(255, 255, 255, 0.15);
+        box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.9), inset 0 1px 0 0 rgba(255, 255, 255, 0.1);
+      }
       
       /* Rainbow Username Animation */
       .rainbow-text {
