--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
               'slide-up': 'slideUp 0.6s cubic-bezier(0.16, 1, 0.3, 1)',
               'fade-in': 'fadeIn 0.4s ease-out',
               'logo-float': 'logoFloat 3s ease-in-out infinite',
+              'shake': 'shake 0.5s cubic-bezier(.36,.07,.19,.97) both infinite',
             },
             keyframes: {
               slideUp: {
@@ -45,6 +46,12 @@
               logoFloat: {
                 '0%, 100%': { transform: 'translateY(0)', filter: 'drop-shadow(0 0 8px rgba(145, 70, 255, 0.3))' },
                 '50%': { transform: 'translateY(-2px)', filter: 'drop-shadow(0 0 15px rgba(83, 252, 24, 0.5))' },
+              },
+              shake: {
+                '10%, 90%': { transform: 'translate3d(-1px, 0, 0)' },
+                '20%, 80%': { transform: 'translate3d(2px, 0, 0)' },
+                '30%, 50%, 70%': { transform: 'translate3d(-4px, 0, 0)' },
+                '40%, 60%': { transform: 'translate3d(4px, 0, 0)' }
               }
             }
           }
