feat: Integrate Supabase for backend services
Adds Supabase client initialization and authentication methods. This allows the application to connect to a cloud backend for user data persistence and synchronization, including Twitch and Kick authentication tokens.

Introduces new types and services to manage user profiles, authentication states, and backend interactions. Also adds basic UI elements for cloud integration settings.

--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
     "react": "https://aistudiocdn.com/react@^19.2.1",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.31.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
-    "framer-motion": "https://aistudiocdn.com/framer-motion@^11.0.8"
+    "framer-motion": "https://aistudiocdn.com/framer-motion@^11.0.8",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.87.1"
   }
 }
 </script>
