--- a/index.html
+++ b/index.html
@@ -65,32 +65,30 @@
         overflow: hidden;
       }
       
-      /* Liquid Glass 4.0 - Ultra Clear Glass */
+      /* Liquid Glass 4.0 - Ultra Clear Glass Refined */
       .liquid-glass {
-        background: rgba(5, 5, 5, 0.60);
-        backdrop-filter: blur(12px) saturate(180%);
-        -webkit-backdrop-filter: blur(12px) saturate(180%);
-        border: 1px solid rgba(255, 255, 255, 0.15);
-        border-top: 1px solid rgba(255, 255, 255, 0.25);
-        box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.8), inset 0 0 0 1px rgba(255, 255, 255, 0.05);
+        background: rgba(255, 255, 255, 0.02); /* More transparent */
+        backdrop-filter: blur(8px); /* Reduced blur for clarity */
+        -webkit-backdrop-filter: blur(8px);
+        border: 1px solid rgba(255, 255, 255, 0.12); /* Sharper border */
+        box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
       }
 
       .liquid-glass-strong {
-        background: rgba(0, 0, 0, 0.80);
-        backdrop-filter: blur(16px) saturate(200%);
-        -webkit-backdrop-filter: blur(16px) saturate(200%);
-        border-bottom: 1px solid rgba(255, 255, 255, 0.15);
-        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
+        background: rgba(10, 10, 12, 0.65); /* Darker tint for readability */
+        backdrop-filter: blur(12px);
+        -webkit-backdrop-filter: blur(12px);
+        border: 1px solid rgba(255, 255, 255, 0.15);
+        box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.5);
       }
 
-      /* Premium Modal Glass */
+      /* Premium Modal Glass - Refined */
       .liquid-modal {
-        background: rgba(18, 18, 18, 0.75);
-        backdrop-filter: blur(24px) saturate(180%);
-        -webkit-backdrop-filter: blur(24px) saturate(180%);
+        background: rgba(9, 9, 11, 0.75); /* Deep dark glass */
+        backdrop-filter: blur(16px);
+        -webkit-backdrop-filter: blur(16px);
         border: 1px solid rgba(255, 255, 255, 0.1);
-        border-top: 1px solid rgba(255, 255, 255, 0.15);
-        box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.9), inset 0 1px 0 0 rgba(255, 255, 255, 0.1);
+        box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.8), 0 0 0 1px rgba(255, 255, 255, 0.05);
       }
       
       /* Rainbow Username Animation */
