refactor: Enhance liquid glass styling and subscription message appearance
Refines the visual styling of the liquid glass effect across the application. This includes adjusting background opacity, backdrop blur, border thickness, and shadow properties to create a more premium and distinct look.

Additionally, the appearance of subscription messages has been updated. The `liquid-glass` class was removed and manual styles were applied to allow gradient backgrounds to render correctly, with increased opacity for better visibility.

--- a/index.html
+++ b/index.html
@@ -65,30 +65,31 @@
         overflow: hidden;
       }
       
-      /* Liquid Glass 4.0 - Ultra Clear Glass Refined */
+      /* Liquid Glass 5.0 - Refined for "Premium" Feel */
       .liquid-glass {
-        background: rgba(255, 255, 255, 0.02); /* More transparent */
-        backdrop-filter: blur(8px); /* Reduced blur for clarity */
+        background: rgba(255, 255, 255, 0.02);
+        backdrop-filter: blur(8px);
         -webkit-backdrop-filter: blur(8px);
-        border: 1px solid rgba(255, 255, 255, 0.12); /* Sharper border */
-        box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+        border: 1px solid rgba(255, 255, 255, 0.08); /* Thinner border */
+        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
       }
 
+      /* Darker glass for Inputs and Buttons */
       .liquid-glass-strong {
-        background: rgba(10, 10, 12, 0.65); /* Darker tint for readability */
-        backdrop-filter: blur(12px);
+        background: rgba(10, 10, 14, 0.7); /* Much darker base */
+        backdrop-filter: blur(12px); /* Cleaner blur */
         -webkit-backdrop-filter: blur(12px);
-        border: 1px solid rgba(255, 255, 255, 0.15);
-        box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.5);
+        border: 1px solid rgba(255, 255, 255, 0.12); /* Crisper highlight */
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5); /* Deeper shadow */
       }
 
-      /* Premium Modal Glass - Refined */
+      /* Modal Glass - Deep Depth */
       .liquid-modal {
-        background: rgba(9, 9, 11, 0.75); /* Deep dark glass */
-        backdrop-filter: blur(16px);
-        -webkit-backdrop-filter: blur(16px);
+        background: rgba(13, 13, 15, 0.85); /* Deep dark tint */
+        backdrop-filter: blur(20px); /* Heavy blur for focus */
+        -webkit-backdrop-filter: blur(20px);
         border: 1px solid rgba(255, 255, 255, 0.1);
-        box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.8), 0 0 0 1px rgba(255, 255, 255, 0.05);
+        box-shadow: 0 25px 60px -12px rgba(0, 0, 0, 0.7), 0 0 0 1px rgba(255, 255, 255, 0.05);
       }
       
       /* Rainbow Username Animation */
